@@ -1,8 +1,8 @@
-52b1e8f53cc50fff67c6c5b4fd20693c *ChangeLog
-38988e84b6989887cd39a761098ca380 *DESCRIPTION
+d13b36b8044b00aea5b122ce7e431756 *ChangeLog
+e0f067caab6223e9c634796d5b7ae57d *DESCRIPTION
 007a34bc6ee8a905227c72d26c3aed0e *NAMESPACE
-ded8f3476807740b57a1ffdef173d760 *R/rcicr.R
-22e3b547d69a8fdb08ffa6a45161a105 *R/rcicr_2IFC.R
+9157d1eea370a1d1ca5676e1f44b8fa7 *R/rcicr.R
+a79a9f37f724759e7377961dc1663d75 *R/rcicr_2IFC.R
 de9044933c3103527b0f1aa869ec9c28 *R/rcicr_simulations.R
 08e66b1164b2602fb56cdd38f146374e *inst/CITATION
 e464f07f1e060f83b96a73ff5a725b3f *man/autoscale.Rd
